--- a/Distiller-server/pom.xml
+++ b/Distiller-server/pom.xml
@@ -23,11 +23,8 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- Right now Spring security is disabled for the time.
-  		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency> -->
+		<!-- Right now Spring security is disabled for the time. <dependency> <groupId>org.springframework.boot</groupId> 
+			<artifactId>spring-boot-starter-security</artifactId> </dependency> -->
 
 		<dependency>
 			<groupId>org.hbase</groupId>
@@ -56,6 +53,12 @@
 			<groupId>com.typesafe</groupId>
 			<artifactId>config</artifactId>
 			<version>1.0.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.mapr.distiller</groupId>
+			<artifactId>Distiller-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 
 	</dependencies>
