--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,6 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.12</version>
 		</dependency>
-
 	</dependencies>
 
 	<build>
@@ -60,5 +59,7 @@
 
 	<modules>
 		<module>Distiller-server</module>
+		<module>Distiller-client</module>
+		<module>Distiller-common</module>
 	</modules>
 </project>
