1. Spring boot has problems building Distiller-common as it does not have any spring dependencies 2. Added logback.xml for Distiller-client 3. Distiller-server logs goes to distiller-server-*.log 4. Redirecting distiller logs to /tmp/distiller

--- a/Distiller-common/pom.xml
+++ b/Distiller-common/pom.xml
@@ -12,15 +12,10 @@
 	<artifactId>Distiller-common</artifactId>
 	<name>Distiller-common</name>
 	<url>http://maven.apache.org</url>
-	<packaging>pom</packaging>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.7</java.version>
 	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+
 </project>
