--- a/Distiller-client/pom.xml
+++ b/Distiller-client/pom.xml
@@ -12,8 +12,11 @@
 	<artifactId>Distiller-client</artifactId>
 	<name>Distiller-client</name>
 	<url>http://maven.apache.org</url>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<start-class>com.mapr.distiller.client.App</start-class>
+		<java.version>1.7</java.version>
 	</properties>
 
 	<dependencies>
@@ -28,10 +31,14 @@
 			<artifactId>Distiller-common</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-			<groupId>org.scala-lang</groupId>
-			<artifactId>scala-library</artifactId>
-			<version>2.10.4</version>
-		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 </project>
